# object_detection_cpp

./: .gitignore  CMakeLists.txt  README.md  cascade.cpp  cascade.h  constants.h  feature.cpp  feature.h  image.cpp  image.h  learner.cpp  learner.h  main.cpp  old_funcs.txt  runtime.cpp  runtime.h  utils.cpp  utils.h
classifiers/: 15px_10layer_1000faces.csv  15px_25layer_1000faces.csv  15px_4layer_1000faces.csv  24px_38layer_1000faces.csv  24px_4layer_1000faces.csv
classifiers/2000fcs_2000bgs_24px_0.010000FP_0.990000D_0.000500TFP/: 0.csv  1.csv
classifiers/2500fcs_2500bgs_24px_0.005000FP_0.995000D_0.002500TFP/: 0.csv
classifiers/5000fcs_5000bgs_24px_0.001000FP_0.995000D_0.000500TFP/: 0.csv  1.csv
classifiers/500fcs_500bgs_15px_0.100000FP_0.990000D_0.005000TFP/: 0.csv  1.csv
classifiers/paper_impl/: 10.csv  100.csv  2.csv  25.csv  26.csv  50.csv  51.csv  52.csv
classifiers/test/: 10.csv  2.csv  25.csv  4.csv
pywork/: plotting.py
